tests/good/good002.lat
int main() {
    a[3].pole[42].x.y[7] = 0;
    return 42;
}