tests/bad/bad029.lat
class A { int a = 42; }

int main() { return 42; }